<resources>
    <string name="app_name">AsepExamApplication</string>
    <string name="default_web_client_id">573751837779-g6vmf98ignol6l8kqqie75m6n4jkm4e0.apps.googleusercontent.com</string>

    <string name="appname">Aplikasi UTS Android by Asep</string>
    <string name="h1">Data Buku</string>
    <string name="h22222">Data Mahasiswa</string>

    <string name="login_title">Sign in</string>
    <string name="login_desc">Segera akses dashboard UTB untuk melihat berbagai buku yang tersedia!</string>



    <string name="registration_title">Create an account</string>

    <string name="registration_desc">Registrasi akun mahasiswa UTB</string>

    <string name="label_username">Username :</string>
    <string name="hint_username">Masukan username</string>

    <string name="label_email">Nama email :</string>
    <string name="hint_email">Masukan email</string>

    <string name="label_password">Password</string>
    <string name="hint_password">Masukan password</string>

    <string name="label_cpassword">Confirm password</string>
    <string name="hint_cpassword">Masukan password lagi</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_registration">REGISTER</string>

    <string name="ask_registration">Belum punya akun ?</string>
    <string name="ask_login">Sudah punya akun ?</string>

    <string name="link_registrasi">Daftar</string>
    <string name="link_login">Login</string>


    <string name="radio_man">Pria</string>
    <string name="radio_female">Wanita</string>

    <string name="copyright">Copyright © 2024 by Asep Supriyadi</string>
    <string name="photoDesc">photo</string>
    <string name="LabelListNama">Nama Mahasiswa</string>
    <string name="LabelListNIM">NIM</string>


</resources>
