<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/background"
    tools:ignore="ScrollViewCount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_fields"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/logo_utb"
                android:layout_marginBottom="15dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/registration_title"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/registration_desc"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="35dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/label_username"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/my_border"
                    android:hint="@string/hint_username"
                    android:drawableStart="@drawable/baseline_school_24"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="text"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/label_email"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/my_border"
                    android:hint="@string/hint_email"
                    android:drawableStart="@drawable/information_icon"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="textEmailAddress"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/label_password"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/my_border"
                    android:hint="@string/hint_password"
                    android:drawableStart="@drawable/lock_line_icon"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="textPassword"
                    />


<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textSize="14sp"-->
<!--                    android:text="@string/label_cpassword"-->
<!--                    android:layout_marginBottom="10dp"-->
<!--                    />-->

<!--                <EditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:id="@+id/signup_cpassword"-->
<!--                    android:background="@drawable/my_border"-->
<!--                    android:hint="@string/hint_cpassword"-->
<!--                    android:drawableStart="@drawable/change_password_icon"-->
<!--                    android:drawablePadding="10dp"-->
<!--                    android:padding="10dp"-->
<!--                    android:layout_marginBottom="15dp"-->
<!--                    android:inputType="textPassword"-->
<!--                    />-->

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_registration"
                    app:cornerRadius="10dp"
                    />

            </LinearLayout>




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_login"
                    android:paddingEnd="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/login_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_login"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/copyrights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copyright"
                    android:textColor="@color/darkgray"
                    android:gravity="center"
                    android:textSize="12sp"
                    tools:ignore="MissingConstraints"
                    android:padding="20dp"
                    />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>