<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_login2"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_fields"
        android:layout_width="match_parent"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/box"
        android:padding="30dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/login_title"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/label_email"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/my_border"
                    android:hint="@string/hint_email"
                    android:drawableStart="@drawable/baseline_school_24"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:layout_marginBottom="15dp"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/label_password"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/my_border"
                    android:hint="@string/hint_password"
                    android:drawableStart="@drawable/lock_line_icon"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:layout_marginBottom="15dp"
                    android:inputType="textPassword"
                    />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/btn_login"
                    app:cornerRadius="10dp"
                    android:onClick="Login"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Atau"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                tools:ignore="RtlSymmetry"
                android:textAlignment="center"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
            >
                <Button
                    android:id="@+id/googleSignInButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign in with Google"
                    app:cornerRadius="10dp"
                    />


                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_registration"
                    android:paddingEnd="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/registrationURl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_registrasi"
                    android:textColor="@color/blue"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/copyrights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="@color/darkgray"
            android:gravity="center"
            android:textSize="12sp"
            tools:ignore="MissingConstraints"
            android:padding="20dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>